--- a/submit-car-intro.html
+++ b/submit-car-intro.html
@@ -334,71 +334,93 @@
         </div>
     </nav>
 
-    <section class="section-slide-timer-cars">
-        <div class="slide-cars1">
-            <div class="slide-cars2">
-                <div class="slide-timer fades">
-                    <div class="img-slide-timer">
-                        <img src="img/featured-avatar.jpg" alt="" id="image-timer1">
-                    </div>
+    <section class="section-image-top-position mt-3">
 
-                    <div class="slider-timers-word">
-                        <div class="slider-wordd">
-                            <div class="sliders-wordd">
-                                Submit your car & start earning money
-                            </div>
-                            <div class="slider-timers"> Owners earn more money by renting their car to other users.
-                                Rent your car to other people.It’s easy, safe & profitable.
-                            </div>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active width-height-img-slider-top">
+                    <img src="img/featured-avatar.jpeg" class="img-fluid" alt="...">
 
-                            <a href="#" class="slider-timerss">submit your car</a>
+                    <div class="Words-slider-top  carousel-caption d-none d-md-block">
+
+                        <div class="words-sliders-top">
+
+                            <h1 class="h1-slider-top text-white"> Our slogan</h1>
+                            <h2 class="h22-slider-top text-white-50"> el-trip</h2>
+                            <h3 class="h33-slider-top text-muted"> Make</h3>
+                            <h3 class="h333-slider-top text-info"> start earning money</h3>
+                            <p class="p-slider-top text-white"> Owners earn more money by renting their car to other
+                                users. Rent your car to other people. It’s easy, safe & profitable.
+                            </p>
+                            <button id="link-click-slider-top"> <a href="#" id="link-click-slider">submit your car</a></button>
+
                         </div>
+
                     </div>
+
                 </div>
+                <div class="carousel-item width-height-img-slider-top">
+                    <img src="img/featured-avatar-click.jpg" class="img-fluid" alt="...">
 
-                <div class="slide-timer fades" style="display: none;">
-                    <div class="img-slide-timer">
-                        <img src="img/brandless-moder-car_110488-502.avif" alt="" id="image-timer3">
-                    </div>
+                    <div class="Words-slider-top  carousel-caption d-none d-md-block">
 
-                    <div class="slider-timers-word">
-                        <div class="slider-wordd">
-                            <div class="sliders-wordd">
-                                Submit your car & start earning money
-                            </div>
-                            <div class="slider-timers"> Owners earn more money by renting their car to other users.
-                                Rent your car to other people.It’s easy, safe & profitable.
-                            </div>
+                        <div class="words-sliders-top">
 
-                            <a href="#" class="slider-timerss">submit your car</a>
+                            <h1 class="h1-slider-top text-white"> Our slogan</h1>
+                            <h2 class="h22-slider-top text-white-50"> el-trip</h2>
+                            <h3 class="h33-slider-top text-muted"> Make</h3>
+                            <h3 class="h333-slider-top text-info"> customers</h3>
+                            <p class="p-slider-top text-white"> Don't just take our word for it. We're rated at 9.7/10 on
+                                independent review website TrustPilot, from over 4,000
+                                genuine customer reviews.</p>
+                            <button id="link-click-slider-top"> <a href="#" id="link-click-slider">register
+                                    now</a></button>
+
                         </div>
+
                     </div>
+
                 </div>
+                <div class="carousel-item width-height-img-slider-top">
+                    <img src="img/featured-avatar5.jpeg" class="img-fluid width-priveat" a lt="...">
 
-                <div class="slide-timer fades" style="display: none;">
-                    <div class="img-slide-timer">
-                        <img src="img/featured-avatar5.jpg" alt="" id="image-timer2">
-                    </div>
+                    <div class="Words-slider-top  carousel-caption d-none d-md-block">
 
-                    <div class="slider-timers-word">
-                        <div class="slider-wordd">
-                            <div class="sliders-wordd">
-                                Submit your car & start earning money
-                            </div>
-                            <div class="slider-timers"> Owners earn more money by renting their car to other users.
-                                Rent your car to other people.It’s easy, safe & profitable.
-                            </div>
+                        <div class="words-sliders-top">
 
-                            <a href="#" class="slider-timerss">submit your car</a>
+                            <h1 class="h1-slider-top text-white"> Our slogan</h1>
+                            <h2 class="h22-slider-top text-white-50"> el-trip</h2>
+                            <h3 class="h33-slider-top text-muted"> Make</h3>
+                            <h3 class="h333-slider-top text-info"> customers</h3>
+                            <p class="p-slider-top text-white"> Make an Impression Cars for every budget
+                                We have a dedicated procurement team working around the clock to make sure you always
+                                get the best deals......
+                                our service In that time we've grown from 115 sales to over 7000 with full warranty</p>
+                            <button id="link-click-slider-top"> <a href="#" id="link-click-slider"> RIDE
+                                    NOW</a></button>
+
                         </div>
-                    </div>
-                </div>
 
+                    </div>
+
+                </div>
             </div>
+            <button class="carousel-control-prev prev-slider" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next next-slider" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
+
     </section>
 
-    <section class="CarCarry">
+    <!-- section CarCarry -->
+    <section class="CarCarry index-margin">
         <div class="display">
             <div class="car1-carry">
                 <h1 class="aboutofcar">Things you’ll love about Car Carry</h1>
@@ -459,11 +481,11 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
     </section>
+    <!-- section CarCarry /-->
 
-    <section class="Latest-rentals">
+    <!-- section Latest-rentals -->
+    <section class="Latest-rentals mt-5">
         <div class="carlatest">
             <div class="lastercar1">
                 <h3 class="address">Latest rentals</h3>
@@ -471,9 +493,9 @@
 
             <div class="rentalscar">
 
-                <div class="lastercar2">
+                <div class="row priveat-new-row">
 
-                    <div class="rentals-car">
+                    <div class="col-lg-4 w-30 col-md- col-sm-12">
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
                             <span class="day-car">$35/day</span>
@@ -494,14 +516,18 @@
 
                             <div class="LINKletest">
                                 <span class="icon-car">
-                                    <img src="img/arrow-cursor-svgrepo-com.svg" alt="arrow" class="svg-car">
-                                    01000 New York</span>
+                                    <!-- <span class="material-symbols-outlined svg-car">
+                                        arrow_circle_up
+                                        </span> -->
+                                    <i class="fa-solid fa-arrow-up" style="color: #ff0000;"></i>
+                                    01000 New York
+                                </span>
                             </div>
                         </div>
                     </div>
                     <!-- ـــــــــــــــــــــــــــــــــــــــ -->
 
-                    <div class="rentals-car">
+                    <div class="col-lg-4 w-30 col-md- col-sm-12">
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
                             <div class="imgcar1"><img src="img/client-1.jpg" alt="client-1" class="img2-car"></div>
@@ -523,15 +549,19 @@
 
                             <div class="LINKletest">
                                 <span class="icon-car">
-                                    <img src="img/arrow-cursor-svgrepo-com.svg" alt="arrow" class="svg-car">
-                                    21345 Manchester</span>
+                                    <!-- <span class="material-symbols-outlined svg-car">
+                                        arrow_circle_up
+                                        </span> -->
+                                    <i class="fa-solid fa-arrow-up" style="color: #ff0000;"></i>
+                                    01000 New York
+                                </span>
                             </div>
                         </div>
                     </div>
 
                     <!-- ـــــــــــــــــــــــــــــــــــــــ -->
 
-                    <div class="rentals-car media">
+                    <div class="col-lg-4 w-30 col-md- col-sm-12">
                         <div class="img-car">
                             <img src="img/car1.jpg" alt="car1" class="img1-car">
                             <div class="imgcar1"><img src="img/client-1.jpg" alt="client-1" class="img2-car"></div>
@@ -552,50 +582,25 @@
 
                             <div class="LINKletest">
                                 <span class="icon-car">
-                                    <img src="img/arrow-cursor-svgrepo-com.svg" alt="arrow" class="svg-car">
-                                    01000 New York</span>
+                                    <!-- <span class="material-symbols-outlined svg-car">
+                                        arrow_circle_up
+                                        </span> -->
+                                    <i class="fa-solid fa-arrow-up" style="color: #ff0000;"></i>
+                                    01000 New York
+                                </span>
                             </div>
                         </div>
                     </div>
 
                 </div>
 
-                <div class="rentals-car MEDIA">
-                    <div class="img-car">
-                        <img src="img/car1.jpg" alt="car1" class="img1-car">
-                        <div class="imgcar1"><img src="img/client-1.jpg" alt="client-1" class="img2-car"></div>
-                        <span class="day-car">$35/day</span>
-                    </div>
-
-                    <div class="rentals-car2">
-                        <div class="linkletest">
-                            <h4 class="link-letest"><a href="#" class="linklaster">Infiniti Q50</a></h4>
-                            <ul class="starcar">
-                                <li class="star-car"><img src="img/star-svgrepo-com.svg" alt="" class="svgcar"></li>
-                                <li class="star-car"><img src="img/star-svgrepo-com.svg" alt="" class="svgcar"></li>
-                                <li class="star-car"><img src="img/star-svgrepo-com.svg" alt="" class="svgcar"></li>
-                                <li class="star-car"><img src="img/star-svgrepo-com.svg" alt="" class="svgcar"></li>
-                                <li class="star-car"><img src="img/star-svgrepo-com.svg" alt="" class="svgcar"></li>
-                            </ul>
-                        </div>
-
-                        <div class="LINKletest">
-                            <span class="icon-car">
-                                <img src="img/arrow-cursor-svgrepo-com.svg" alt="arrow" class="svg-car">
-                                01000 New York</span>
-                        </div>
-                    </div>
-                </div>
-
-
-
             </div>
         </div>
         </div>
     </section>
+    <!-- section Latest-rentals /-->
 
-    <!-- subhead -->
-    <footer class=" footer-bootstrap-v5">
+    <footer class=" footer-bootstrap-v5 mt-2">
 
         <div class="row ms-0 me-0">
 
